--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^7.2.1",
     "clsx": "^1.1.1",
     "draft-js": "^0.11.6",
+    "draftjs-to-html": "^0.9.1",
+    "jspdf": "^1.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
