--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "calculate-size": "^1.1.1",
     "clsx": "^1.1.1",
     "konva": "^7.0.3",
     "react": "^16.13.1",
