--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
-    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "calculate-size": "^1.1.1",
     "clsx": "^1.1.1",
     "draft-js": "^0.11.6",
+    "konva": "^7.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
-    "konva": "^7.0.3",
     "react-konva": "^16.13.0-3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "react-toastify": "^6.0.8",
     "react-window": "^1.8.5"
   },
   "scripts": {
